# job-radar

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: job-radar.md  jr-consume.md  jr.md
job_radar/: __init__.py  cli.py  config.py  init_flow.py
job_radar/apply/: cover.py  flow.py  render.py
job_radar/contacts/: call.py  crm.py  followup.py
job_radar/dash/: build.py  template.html
job_radar/db/: __init__.py  queries.py  schema.sql
job_radar/export/: markdown.py
job_radar/importers/: career_ops.py  portals.py
job_radar/ingest/: email_eml.py  paste.py
job_radar/jd/: lifecycle.py
job_radar/learn/: keywords.py  patterns.py  rejections.py
job_radar/llm/: _report.py  answers.py  autohooks.py  batch_triage.py  client.py  dispatcher.py  evaluate.py  interview.py  offer.py  outreach.py  queue.py  ranker.py  research.py  thanks.py  triage.py
job_radar/parse/: html_to_md.py  jd_extract.py
modes/: _shared.md  answers.md  evaluate.md  ingest.md  interview.md  learn-keywords.md  offer.md  outreach.md  rejection-reasons.md  research.md  respond.md  thanks.md  triage.md
templates/: cover-template.example.md  cv.example.md  keywords.example.yml  portals.example.yml  profile.example.yml  questions.example.yml  resume.css  story-bank.example.md
tests/: conftest.py  test_add_url.py  test_brief.py  test_cover_render.py  test_dashboard_build.py  test_db.py  test_hashing.py  test_html_to_md.py  test_jd_extract.py  test_llm_dispatcher.py  test_llm_queue.py  test_llm_ranker.py  test_patterns.py  test_screen.py  test_tiered_triage.py
(+28 files in other folders)
